Removed obsolete permgen flags.